# WTframework

./: .gitmodules  README.md
EJERCICIO_1/: index.html  worker.js
EJERCICIO_2/: index2.html  indexdb2.js  sharedworker_v3.js
EJERCICIO_3/backend/: Cargo.toml
EJERCICIO_3/backend/wtransport/: key.pem
EJERCICIO_3/backend/wtransport/wtransport/examples/: server.rs
EJERCICIO_3/frontend/: index.html  java.js
EJERCICIO_4/: README.md
EJERCICIO_4/backend/: Cargo.toml
EJERCICIO_4/backend/src/: main.rs
EJERCICIO_4/frontend/: client.js  index.html  shared-worker.js  stream-manager.js
EJERCICIO_5/: test.html
EJERCICIO_6/backend/: Cargo.toml  indexdb2.js
EJERCICIO_6/frontend/: index2.html
EJERCICIO_7/backend/: indexdb2.js  sharedworker_v3.js
EJERCICIO_7/backend/src/: main.rs
EJERCICIO_7/frontend/: index2.html
EJERCICIO_API/backend/: indexdb2.js
EJERCICIO_API/backend/src/: main.rs
EJERCICIO_API/backend/wtransport/: cert.pem
EJERCICIO_API/backend/wtransport/wtransport/examples/: full.rs
EJERCICIO_API/frontend/: index2.html  sharedworker_v3.js
