[package]
name = "metadata-server"
version = "0.1.0"
edition = "2021"

[dependencies]
wtransport = { path = "../../EJERCICIO_3/backend/wtransport/wtransport" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
