[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
wtransport = { path = "./wtransport/wtransport" }

anyhow = "1.0"

tokio = { version = "1.37", features = ["macros", "rt-multi-thread"] }

tracing = "0.1"

tracing-subscriber = { version = "0.3", features = ["env-filter"] }